Move column index out of ColumnMetadata